# level2-3-nlp-finalproject-nlp-02

./: .gitignore  README.md  app.py  auth_router.py  main.py  models.py  pyproject.toml  start_rec_save.py  test_router.py
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md
Backend/: auth_router.py  main.py  models.py  oauth.py  test_router.py
Backend/database/: -- CREATE TABLE USERS.pgsql  connection.py  orm.py  questions_db.py  repository.py  users_automation.py  users_table_auto.sh
Backend/schema/: request.py  response.py
DH/: fluency_api.py
Frontend/: app.py
Frontend/pages/: feedback.py  finish.py  history.py  lobby.py  pretest.py  session.py  test.py
Model/: grammar_api.py  models.py  whisperx_api.py
Model/gector/: requirements.txt
Model/utils/: gram_metrics.py
Models/: fluency_api.py  grammar_api.py  phoneme_rec_api.py  whisperx_api.py
Models/GPTs/: question_generate.ipynb  sentence_complexity.ipynb
Models/data/: generated_question.json
Re-Frontend/: package-lock.json  package.json
code/: coherence.ipynb  crawling.ipynb  question_generate.ipynb
data/: coherence_train_sample.jsonl  generated_question_t0.9.json  generated_question_v2.json  question_train_sample.jsonl  sentence_complexity_sample.jsonl
database/: connection.py  json_to_db.py  orm.py  questions_db.py  repository.py  users_table_auto.sh
models/: fluency_api.py  grammar_api.py  phoneme_rec_api.py  tts_model.py
pages/: feedback.py  history.py  lobby.py  pretest.py  questiontest.py  session.py  test.py  test_mic_recorder.py
schema/: request.py  response.py
(+41 files in other folders)
